2006-05-03  Robert Schuster  <robertschuster@fsfe.org>

	* gnu/testlet/javax/swing/text/GapContent/constructors.java:
	(testConstructor2): Put checks into try-catch block. added a second
	length check.
	* gnu/testlet/javax/swing/text/GapContent/insertString.java:
	(testGeneral): Added note.

2006-05-01  Bryce McKinlay  <mckinlay@redhat.com>

	* gnu/testlet/java/util/HashMap/AcuniaHashMapTest.java
	(test_entrySet): Iterator.hasNext() does not throw
	ConcurrentModificationException - update test accordingly.
	* gnu/testlet/java/util/LinkedHashMap/LinkedHashMapTest.java
	(test_entrySet): Likewise.

2006-05-01  Olivier Jolly  <olivier.jolly@pcedev.com>

	* gnu/testlet/java/util/Calendar/add.java: (test): Fixed compilation error
	introduced by the addition of the TimeZone test.
	* gnu/testlet/java/util/Calendar/minmax.java: (test): Fixed compilation error
	introduced by the addition of the TimeZone test.
	* gnu/testlet/java/util/Calendar/roll.java: (test): Fixed compilation error
	introduced by the addition of the TimeZone test.	

2006-05-01  Olivier Jolly  <olivier.jolly@pcedev.com>

	* gnu/testlet/java/util/Calendar/TimeZone.java: New test.

2006-04-27  Robert Schuster  <robertschuster@fsfe.org>

	* gnu/testlet/javax/swing/text/Utilities/getNextWord.java: New test.
	* gnu/testlet/javax/swing/text/Utilities/getTabbedTextOffset.java:
	(test): Use fixed value to end loop.

2006-04-27  Robert Schuster  <robertschuster@fsfe.org>

	* gnu/testlet/javax/swing/text/Utilities/getTabbedTextOffset.java: New
	test.

2006-04-26  Anthony Balkissoon  <abalkiss@redhat.com>

	* Harness.java: 
	(getBootClassPath): Changed "/" to "." in exec command so it works with
	gij.
	(compileFolder): Count multiple compile errors for the same test as
	just one total test and one total fail, and print the FAIL header info
	only once.

2006-04-26  Anthony Balkissoon  <abalkiss@redhat.com>

	* Harness.java: Changed reference to --disable-auto-compile to 
	--disable-auto-compilation.