@@ -1,3 +1,9 @@
+2006-05-04  Gary Benson  <gbenson@redhat.com>
+
+	* gnu/testlet/java/lang/Thread/security.java: Added some missing
+	constructor tests, and rearranged to work with class libraries
+	other than Classpath.
+
 2006-05-03  Robert Schuster  <robertschuster@fsfe.org>
 
 	* gnu/testlet/javax/swing/text/GapContent/constructors.java:
